fixing video not showing completly on mobile

--- a/src/Styling/Painting.css
+++ b/src/Styling/Painting.css
@@ -262,8 +262,7 @@
 @media screen and (max-width:750px) {
     .landing-hero{
         flex-direction: column;
-        height: 100dvh;
-        overflow: hidden;
+        height: fit-content;
     }
 
     .column{
